// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary of 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h1>
</div>
`;

exports[`should render summary of multiple expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    45
     
    expenses
     totalling 
    $987,566.23
  </h1>
</div>
`;
